--- a/src/banner.css
+++ b/src/banner.css
@@ -2,6 +2,7 @@
     min-height: 448px;
     width: 100%;
     color: white;
+    z-index: 1;
 }
 
 .bannner__description {
@@ -12,6 +13,8 @@
 .banner_contents {
     margin-left: 35px;  
     padding-top: 100px;
+    z-index: 1;
+
 }
 
 .bannner__description p {
@@ -36,4 +39,6 @@
     background-color: #e6e6e6;
     color:#000;
     transition: all 450ms;
+    z-index: 1;
+
 }
